# Imdevops

./: .gitignore  README.md  main.tf  outputs.tf  roles.tf  setup.sh  ssm_params.tf  variables.tf  vpc_settings.tf
.github/workflow/: build.yml
.github/workflows/: build.yml  deploy.yml  merge.yml  test.yml
src/: Dockerfile  README.md  alembic.ini  dev.env  docker-compose.yml  environments.py  models.py  notification.py  package-lock.json  package.json  pyproject.toml  serverless.yml  workers.py
src/alembic/: env.py
src/alembic/versions/: 0efd9838a46a_added_account_table.py
src/devops/: build-ecr.sh  merge.sh
