[tool.poetry]
name = "imbee"
version = "0.1.0"
description = "This is a homework"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.15"
ormar = "^0.12.0"
alembic = "^1.8.1"
mysqlclient = "^2.1.1"
aiomysql = "^0.1.1"
firebase-admin = "^6.0.1"
requests = "^2.28.1"
awslambdaric = "^2.0.4"
boto3 = "^1.26.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
